<resources>
    <string name="app_name">qGasDriver</string>
    <string name="action_settings">Settings</string>
    <string name="section_title">司機個人設定</string>
    <string name="container_title">車載瓦斯桶</string>
    <string name="containerout_title">載出灌氣瓦斯桶</string>
    <string name="containerfillin_title">灌氣載回瓦斯桶</string>
    <string name="account_title">帳號</string>
    <string name="password_title">密碼</string>
    <string name="dummy_text">   </string>
    <string name="no_connection_text">未連接</string>
    <string name="firstorder_title">第一次購氣</string>
    <string name="name_title">姓名</string>
    <string name="address_title">地址</string>
    <string name="family_title">人口</string>
    <string name="conatiner15_title">15公斤瓶數</string>
    <string name="conatiner14_title">14公斤瓶數</string>
    <string name="conatiner20_title">20公斤瓶數</string>
    <string name="price_title">價格</string>
    <string name="scan_new_title">掃描新瓶</string>
    <string name="scan_old_title">掃描舊瓶</string>
    <string name="contract_title">合約</string>
    <string name="customer_sign_title">客戶簽名</string>
    <string name="service_sign_title">服務員簽名</string>
    <string name="remain_title">殘氣</string>
    <string name="print_title">列印</string>
    <string name="ok_string">確定</string>
    <string name="clean_string">清除</string>
    <string name="clean14_string">清除14公斤</string>
    <string name="clean20_string">清除20公斤</string>
    <string name="login_string">登入</string>
    <string name="continue_string">繼續</string>
    <string name="start_string">開始</string>
    <string name="detect_string">偵測</string>
    <string name="input_gas_string">輸入殘氣: </string>
    <string name="order_string">購氣訂單</string>
    <string name="old_container_string">舊瓶列表和輸入殘氣</string>
    <string name="new_container_string">新瓶列表</string>
    <string name="summary_string">交易</string>
    <string name="signature_string">簽名確認</string>
    <string name="done_string">交易完成</string>
    <string name="kg_string">公斤</string>
    <string name="kg14_title">14公斤</string>
    <string name="kg20_title">20公斤</string>
    <string name="search_string">搜索</string>
    <string name="search_rfid_string">搜索RFID</string>
    <string name="search_bar_string">搜索條碼</string>
    <string name="search_rfid_tile">搜索RFID</string>
    <string name="search_barcode_tile">搜索條碼</string>
    <string name="containerout_text">載出灌氣瓦斯桶紀錄</string>
    <string name="containerfillin_text">灌氣載回瓦斯桶紀錄</string>
    <string name="containerup_text">上車瓦斯桶紀錄</string>
    <string name="containerdown_text">下車瓦斯桶紀錄</string>
    <string name="status_title">狀態</string>
    <string name="up_title">氣瓶上車運出</string>
    <string name="down_title">氣瓶運入下車</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="google_maps_key">AIzaSyAvSisM69R0ozlpPXThqjphC66PpWd-fm8</string>

    <string name="devicelist_name">Device List</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving…</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">Scanning for devices…</string>
    <string name="select_device">Select a device to connect</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect to Reader</string>
    <string name="insecure_change">Change Reader</string>
    <string name="disconnect">Disconnect Reader</string>
    <string name="reset_reader_menu_text">Reset Reader</string>
    <string name="reconnect_reader_menu_item_text">Reconnect Last Reader</string>

    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_paired_devices_count_format">Paired Devices (%d)</string>
    <string name="title_paired_devices_empty">Paired Devices (None)</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_other_devices_count_format">Other Available Devices (%d)</string>
    <string name="title_other_devices_empty">Other Available Devices (None)</string>
    <string name="button_scan">Scan</string>
    <string name="discoverable">Make discoverable</string>

    <string name="scan_button_text">Scan</string>
    <string name="clear_button_text">Clear</string>
    <string name="power_level_label_text">dBm</string>
    <string name="use_fast_id_title">Fast Id</string>
    <string name="tag_list_title">Transponders</string>
    <string name="barcode_list_title">Barcodes</string>

</resources>
