<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container_fragment"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:clickable="true"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/container_label"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/container_title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/message_14kg"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:text="@string/kg14_title"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/number_14kg"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="70dp"
            android:text="0"
            android:textAlignment="center"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/car_container_list_view14"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

        <TextView
            android:id="@+id/message_20kg"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="230dp"
            android:text="@string/kg20_title"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/number_20kg"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="230dp"
            android:text="0"
            android:textAlignment="center"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/car_container_list_view20"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp" />

        <TextView
            android:id="@+id/message_status"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="320dp"
            android:text="@string/status_title"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="320dp"
            android:text="@string/up_title"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/newclean14_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="120dp"
            android:layout_marginTop="60dp"
            android:onClick="ProcessCarClean14Click"
            android:text="@string/clean14_string" />

        <Button
            android:id="@+id/newclean20_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="120dp"
            android:layout_marginTop="220dp"
            android:onClick="ProcessCarClean20Click"
            android:text="@string/clean20_string" />

        <Button
            android:id="@+id/up_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="320dp"
            android:onClick="ProcessUpClick"
            android:text="@string/containerup_text" />

        <Button
            android:id="@+id/down_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="360dp"
            android:onClick="ProcessDownClick"
            android:text="@string/containerdown_text" />


    </RelativeLayout>
</FrameLayout>