<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/old_container_list_item">

    <TextView
        android:id="@+id/conatinerRFID"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:text="container RFID"
        android:textSize="14dp" />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="@string/detect_string" />

    <TextView
        android:id="@+id/gas_tile"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:text="@string/input_gas_string"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/gas_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="1dp"
        android:gravity="center"
        android:textSize="14dp"></EditText>

    <TextView
        android:id="@+id/kg_tile"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:gravity="left"
        android:text="@string/kg_string"
        android:textSize="14dp" />

</LinearLayout >
