<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/single_order_fragment"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:clickable="true"
    tools:context="tw.com.qgas.www.qgasdriver.MainActivity$SingleOrderFragment" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="tw.com.qgas.www.qgasdriver.MainActivity$UrgentFragment">


        <TextView
            android:id="@+id/order_label"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/order_string"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/name_title"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="16sp"></EditText>

        <TextView
            android:id="@+id/address_label"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="90dp"
            android:text="@string/address_title"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/address_input"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="16sp"></EditText>

        <TextView
            android:id="@+id/family_label"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="130dp"
            android:text="@string/family_title"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/family_input"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="130dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="16sp"></EditText>

        <TextView
            android:id="@+id/price_label"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="170dp"
            android:text="@string/price_title"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/price_input"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="170dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="16sp"></EditText>

        <TextView
            android:id="@+id/conatiner14_label"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="210dp"
            android:text="@string/conatiner14_title"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/conatiner14_input"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="210dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="16sp"></EditText>

        <TextView
            android:id="@+id/conatiner20_label"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="250dp"
            android:text="@string/conatiner20_title"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/conatiner20_input"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:padding="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="250dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="16sp"></EditText>

        <Button
            android:id="@+id/loginok_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="120dp"
            android:layout_marginTop="50dp"
            android:onClick="ProcessOrderClick"
            android:text="@string/start_string" />

    </RelativeLayout>
</FrameLayout>