<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/sign_fragment"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:clickable="true"
    tools:context="tw.com.qgas.www.qgasdriver.MainActivity$SignFragment" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="tw.com.qgas.www.qgasdriver.MainActivity$InnerFragment">

        <TextView
            android:id="@+id/sign_label"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/signature_string"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.github.gcacace.signaturepad.views.SignaturePad
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/signature_pad"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/signborder"
            app:penColor="@android:color/black"
            />

        <Button
            android:id="@+id/cleansign_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="300dp"
            android:onClick="SignCleanClick"
            android:text="@string/clean_string" />

        <Button
            android:id="@+id/oksign_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="220dp"
            android:layout_marginTop="300dp"
            android:onClick="SignOKClick"
            android:text="@string/ok_string" />

    </RelativeLayout>
</FrameLayout>